public/stylesheets/style.css
body {
  padding: 0px;
  margin:0px;
  height:100%;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
  Roboto, "Helvetica Neue", Arial, sans-serif;
}

a {
  color: #00B7FF;
}

/*
========================================
            MAIN SITE STYLES
========================================
*/

.navbar {
  background-color: #3E1944; /*just to test*/
  display:flex;
  width:100%;
  height:7.5rem;
  overflow:auto;
  background-image: linear-gradient(45deg, #2A112E, #64286e)
}

.login-signup-div {
  display:flex;
  max-width:35%;
  margin-left:auto;
  margin-right: 2%;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.account-buttons {
  margin:15px;
  width:auto;
  height:auto;
  border: none;
  border-radius: 30px;
  color: white;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 20px;
  cursor: pointer;
  background: linear-gradient(135deg, #f6e27a, #d4af37, #f6e27a);
}

.flex-container {
  display: flex;
  min-height:100%;
  width:100%;
}

.sidebar {
  flex-basis: 120px;
  text-align: center;
  background-color: #341539;
  flex-grow:0;
  flex-shrink: 0;
  background-image: linear-gradient(45deg, #2A112E, #341539)
}

.side-button {
  font-size:19px;
  height:6rem;
  margin-top:40px;
  width:70%;
}

#maincontent {
  flex-grow: 1;
  background-color: #2A112E;
  display:flex;
  flex-direction: column;
}

.not-logged-in-div {
  height: 100%;
  width: 100%;
  display: flex;
  justify-content: center;
  font-size: 40pt;
  margin-top: 50px;
}

/*
========================================
        STORE/INVENTORY STYLES
========================================
*/

.store, .inventory, .packPage, .accountPage {
  display: flex;
  flex-direction: column;
  height:100%;
  margin-right:20px;
  margin-bottom: 20px;
}

.packs, .invCards {
  display:flex;
  flex-wrap: wrap;
  flex-wrap: wrap;
}


.storeTitle, .inventoryTitle, .accountTitle {
  margin-left:10px;
  margin-top:20px;
  margin-bottom:20px;
  padding-left:20px;
  padding-right:20px;
  display:flex;
  flex: 0 0 15%;
  text-align: left;
  border-radius: 50px;
  align-items:center;

  /*Glass effect */
  background: rgba(178, 101, 186, 0.22);
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
  backdrop-filter: blur(5px);
  -webkit-backdrop-filter: blur(5px);
  border: 1px solid rgba(178, 101, 186, 0.3);
}

/*
========================================
        INVENTORY/CARD SPECIFIC
========================================
*/

.invWrapper {
  display: flex;
  flex-direction: column;
  margin-left:10px;
  overflow-y: auto;
  border-radius: 50px;

  padding: 25px;

  background: rgba(178, 101, 186, 0.22);
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
  backdrop-filter: blur(5px);
  -webkit-backdrop-filter: blur(5px);
  border: 1px solid rgba(178, 101, 186, 0.3);
}

.invCards {
  margin-left:10px;
}

.inventory h2, .accountTitle h2 {
  font-size:40px;
  color:white;
  margin-left:10px;
}

.card {
  font-size:20px;
  width: 192px;
  height: 269px;
  justify-content: center;
  align-items:center;
  text-align: center;
  border-radius: 8px;
  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
  margin: 20px;
  z-index: 1;
}

.card img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  display: block;
}

.card-quantities {
  position: absolute;
  top: 81.5%;
  left: 90%;
  transform: translate(-50%, -50%);
  color: rgba(255, 255, 255, 0.826);
  background-color: #57007fb7;
  font-size: 22px;
  padding: 5px;
  border-radius: 20%;
  user-select: none;
  cursor: default;
}

.card-favorite {
  position: absolute;
  top: 80%;
  left: 9%;
  transform: translate(-50%, -50%);
  color: rgba(255, 255, 255, 0.826);
  font-size: 35px;
  margin: 0px;
  padding: 5px;
  border-radius: 20%;
  user-select: none;
  cursor: pointer;
}

.card-noquantity {
  filter: grayscale(100%) brightness(0.7);
}

.card-sell-icon {
  position: absolute;
  backdrop-filter: grayscale(20%) brightness(0.8);
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: white;
  font-weight: bold;
  pointer-events: none;
  font-size: 20px;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.card-sell .card-sell-icon div + div {
  font-size: 40px;
}

/*
========================================
          SELLING SPECIFIC
========================================
*/

.sell-button {
  height: 40px;
  width: 100px;
  margin-left: auto;
  margin-right: 20px;
}


.sellCards {
  display: flex;
  flex-direction: row-reverse;
  align-items: center;
  background: rgb(57 22 63);
  border: 1px solid rgba(178, 101, 186, 0.3);
  border-radius: 10px;
  margin-top: 20px;
}

.sellOptions {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-right: 20px;
  margin-left: 20px;
}

.sell-text {
  color: white;
  margin: 10px 0 5px 0;
}

.sell-submit-button {
  height: 40px;
  width: 100px;
  margin-bottom: 10px;
}

.card-small {
  will-change: transform;
  height: 80px;
  width: auto;
}

/*
========================================
        STORE/PACKS SPECIFIC
========================================
*/

.storeTitle h2 {
  font-size:50px;
  color:white;
}

.currency {
  align-items: center;
  text-align:center;
  display:flex;
  margin-left:auto;
}

.currency p {
  font-size:30px;
  color:white;
}

.cardPack {
  display:flex;
  flex-direction: column;
  font-size:20px;
  width: 300px;
  height: 500px;
  justify-content: center;
  align-items:center;
  text-align: center;
  margin: 10px;

  /* Glass Effect */
  background: rgba(159, 75, 213, 0.30);
  border-radius: 16px;
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
  border: 1px solid rgba(175, 83, 232, 0.3);
}

.cardPack img {
  width: 100%;
  height: 80%;
  object-fit: cover;
  display: block;
}

.cardPack p {
  color:white;
}

.cardPackSubtext {
  display:flex;
  flex-direction: column;
  height:20%;
  width:100%;
  border-top: 3px solid rgba(255, 255, 255, 0.5);
  padding-bottom:30px;
  align-items: center;
}

.cardPackSubtext strong {
  margin:5px;
  color:white;
  height:70%;
  font-size: 40px;
}

.cardPackSubtext div {
  display:flex;
  width:100%;
  height:30%;
  align-items: center;
}

.cardPackSubtext div button, .buyButton, .insufficientCurrencyButton, .packCardsPage button {
  width:50%;
  height:40px;
  margin-right:10px;
  border-radius: 20px;
  border-width: 0px;
  background: linear-gradient(135deg, #f6e27a, #d4af37, #f6e27a);
  font-size: 20px;
  font-weight:200;
  cursor:pointer;
}

.insufficientCurrencyButton {
  background: linear-gradient(135deg, #f6e27a, #d4af37, #f6e27a);
  opacity: 40%;
  cursor:default;
}

.packPageLeft button {
  height:60px;
  font-size: 30px;
}

.cardPackSubtext div p{
  width:50%;
}

/*
========================================
            VIEW PACK PAGE
========================================
*/

.packPage {
  flex-direction:row;
  gap:20px;
}

.packPageLeft, .packPageRight {
  display:flex;
  flex-direction: column;
  margin-left:10px;
  margin-top:20px;
  margin-bottom:20px;
  align-items: center;

  flex: 0 0 45%;

  /*Glass effect */
  background: rgba(178, 101, 186, 0.22);
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
  backdrop-filter: blur(5px);
  -webkit-backdrop-filter: blur(5px);
  border: 1px solid rgba(178, 101, 186, 0.3);
  border-radius: 20px;
}

.packPageLeft img {
  width: 380px;
  height: 550px;
  margin-top: -30px;
}

.packPageLeft h1, .packPageRight h1{
  color:white;
  font-size:40px;
}

.packPageLeft div {
  border-bottom: 3px solid rgba(255, 255, 255, 0.5);
  width:100%;
  align-items: center;
  text-align: center;
}

.packPageRight {
  color:white;
}

.packDesc {
  padding-left: 20px;
  padding-right: 20px;
  height: 50%;
  align-items: center;
  text-align: center;
  border-bottom: 3px solid rgba(255, 255, 255, 0.5);
}

.packDesc p {
  font-size: 30px;

}

.packRarities {
  height:50%;
  align-items: center;
  text-align: center;
}

.packRarities h2 {
  font-size:30px;
}

.packRarities ul {
  font-size:40px;
}

#open-pack-div {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  flex-wrap: wrap;
  margin-bottom: 30px;
}

.packCardsPage {
  width:100%;
  height:100%;
  align-items: center;
  text-align: center;
  font-size: 35px;
  color: white;
}

/*
========================================
          ACCOUNT INFO PAGE
========================================
*/

.account-info-div {
  height: 400px;
  margin-left: 10px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-size: 16pt;
  color: white;


  /*Glass effect */
  background: rgba(178, 101, 186, 0.22);
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
  backdrop-filter: blur(5px);
  -webkit-backdrop-filter: blur(5px);
  border: 1px solid rgba(178, 101, 186, 0.3);
  border-radius: 20px;
}

.account-info-div div {
  margin: 5px
}



/*
========================================
        END OF FILE UTILITIES
========================================
*/

.hidden {
  display: none;
}

